[gd_scene load_steps=3 format=3 uid="uid://biwsklhx2k444"]

[ext_resource type="Script" uid="uid://bscemqgh1siiw" path="res://scripts/start_screen.gd" id="1_o7i0r"]
[ext_resource type="FontFile" uid="uid://dyc41syp7k2fc" path="res://assets/Font/HyperStiffRoundBootiedOpossumRegular-XjVd.ttf" id="1_tx5wa"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7i0r")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.180392, 0.247059, 1)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tx5wa")
theme_override_font_sizes/font_size = 15
text = "SonG NAme: "
horizontal_alignment = 1

[node name="BPMLabel" type="Label" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tx5wa")
theme_override_font_sizes/font_size = 15
text = "Bpm: "
horizontal_alignment = 1

[node name="DurationLabel" type="Label" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tx5wa")
theme_override_font_sizes/font_size = 15
text = "Duration: "
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tx5wa")
theme_override_font_sizes/font_size = 15
text = "level: "
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tx5wa")
theme_override_font_sizes/font_size = 20
text = "Play"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
